# nano-rs

./: .gitignore  .goreleaser.yaml  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLEANUP.md  Cargo.toml  EXAMPLES.md  ISOLATE-REUSE-BUG.md  Makefile  P1-P5-FIXES.md  README.md  RELEASE-v1.1.0.md  SLIVER.md  STATUS.md  V147_CALLBACK_UPDATE_STATUS.md  V8_CONTEXT_RESET_ANALYSIS.md  VFS.md  deny.toml  prod.md  zig-cc-wrapper.sh  zig-linker-wrapper.sh
.cargo/: audit.toml  config.toml
.github/workflows/: branch-full-tests.yml  security.yml
.planning/: GAP_ANALYSIS.md  HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  V8_ISOLATE_REUSE_INVESTIGATION.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-v8-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-UAT.md
.planning/phases/02-http-server-core/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-UAT.md
.planning/phases/03-runtime-apis/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-UAT.md
.planning/phases/04-workerpool-dispatch/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-UAT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.project/: PLAN.md
benches/: sliver_cold_start.rs  vfs_security_bench.rs
docs/: ADMIN_API.md  API.md  ARCHITECTURE_CONTROL_DATA_PLANE.md  ARCHITECTURE_UNIFICATION.md  AUDIT_AND_FIXES_SUMMARY.md  AUTO_SLIVER_ARCHITECTURE.md  CLI.md  CLI_TEST_SCRIPT.md  CLOUDFLARE_COMPATIBILITY.md  COLD_START.md  COMPATIBILITY.md  COMPREHENSIVE_PLACEHOLDER_AUDIT.md  CONFIG.md  CRITICAL_BUG_JS_EXECUTION.md  DEBUGGING_ISOLATES.md  DEPENDENCY_AUDIT.md  FEATURE_COVERAGE_REPORT.md  FINAL_TEST_REPORT.md  FINAL_TEST_REPORT_100_PERCENT.md  FUNCTION_SIZE_AUDIT.md  NODEJS_COMPAT.md  PERFORMANCE.md  PHASE_35_COMPLETION_REPORT.md  PHASE_36_COMPLETION_REPORT.md  PHASE_37_COMPLETION_REPORT.md  PHASE_38_COMPLETION_REPORT.md  PRODUCTION_MULTITENANCY.md  SECURITY_GATEWAY.md  SLIVER_WORKFLOW.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_ANALYSIS.md  TEST_CLAIMS_AUDIT.md  TEST_REPORT.md  TIGERSTYLE_NAMING_CONVENTIONS.md  TODO_RESOLUTION.md  V1.2.0_DEVELOPMENT_STATUS.md  V1.2.0_FIX_SUMMARY.md  V8_UPGRADE_ANALYSIS.md  V8_V147_MIGRATION_COMPLETE.md  V8_V147_UPGRADE_STATUS.md  (+9 more)
docs/ADR/: 001-ept-fix.md  002-context-reset.md  003-thread-local-isolates.md  004-vfs-architecture.md  005-crypto-ring.md  006-sliver-format.md  007-esm-strategy.md  README.md
examples/: hello.js
examples/configs/: vfs-backends.json
examples/wasm-test/: Cargo.toml  README.md  add.wasm  config.json  handler.js
reports/: report-1778086960207.json  report-1778086960207.md
scripts/: test_routing.sh
src/: assertions.rs  control_plane.rs  data_plane.rs  lib.rs  limits.rs  main.rs  signal.rs
src/admin/: auth.rs  diagnostics.rs  metrics.rs  mod.rs  server.rs  unix_socket.rs
src/app/: drain.rs  mod.rs  registry.rs  reload.rs  timeout.rs
src/cli/: error.rs  mod.rs  output.rs  progress.rs  sliver.rs  validation.rs
src/config/: app.rs  loader.rs  mod.rs  watcher.rs
src/http/: client.rs  config.rs  headers.rs  mod.rs  router.rs  router_static_fix.patch  server.rs  sliver_handler.rs  types.rs  url.rs  v8_bridge.rs
src/logging/: fields.rs  json_layer.rs  mod.rs
src/metrics/: collector.rs  exporter.rs  mod.rs  tenant.rs  types.rs
src/runtime/: apis.rs  async_support.rs  event_loop.rs  fetch.rs  fs_polyfill.rs  handler.rs  mod.rs  request.rs  stream.rs  types.rs  vfs_bindings.rs  websocket.rs
src/sliver/: FORMAT.md  auto_cache.rs  benchmark.rs  error.rs  extractor.rs  format.rs  metadata.rs  mod.rs  packager.rs  packer.rs  restore.rs  unpacker.rs  validation.rs  vfs_capture.rs
src/v8/: abstractions.rs  context.rs  isolate.rs  mod.rs  module.rs  platform.rs  script.rs  snapshot.rs
src/vfs/: disk.rs  factory.rs  isolate.rs  loader.rs  memory.rs  mod.rs  s3.rs  types.rs
src/wasm/: engine.rs  error.rs  js_api.rs  loader.rs  mod.rs  sliver.rs
src/worker/: app_source.rs  context.rs  cpu_tracker.rs  eviction.rs  limits.rs  memory_monitor.rs  mod.rs  oom.rs  pool.rs  queue.rs  tenant_pool.rs  timeout.rs  trait.rs
tests/: adversarial_cpu.rs  adversarial_crypto.rs  adversarial_isolation.rs  adversarial_isolation_standalone.rs  adversarial_js_injection.rs  adversarial_memory.rs  adversarial_network.rs  adversarial_network_standalone.rs  adversarial_vfs.rs  adversarial_wasm.rs  astro_integration_test.rs  auto_sliver_cache_test.rs  common.rs  config_mode_test.rs  context_reset_test.rs  cpu_timeout_e2e_test.rs  cpu_timeout_integration_test.rs  cpu_timeout_test.rs  crud_operations_test.rs  crypto_aes_gcm_test.rs  crypto_hmac_test.rs  crypto_subtle_test.rs  error_tests.rs  esm_module_tests.rs  framework_compat_test.rs  fs_polyfill_tests.rs  heap_limit_test.rs  hono_integration_test.rs  http_routing_test.rs  http_server_test.rs  http_verbs_test.rs  http_wintercg_test.rs  isolate_endurance_test.rs  isolate_id_oom_test.rs  isolate_reuse_test.rs  isolate_scope_test.rs  isolate_wasm_cache_test.rs  js_execution_test.rs  logging_integration_test.rs  minimal_v8_test.rs  (+35 more)
tools/: cve_scanner.rs
website/: README.md  index.html
website/css/: style.css
website/docs/: api.html  architecture.html  cli.html  compatibility.html  quickstart.html  runtime.html  slivers.html  websocket.html
website/js/: main.js
(+245 files in other folders)
