[package]
name = "nano-rs"
version = "0.1.0"
edition = "2021"
authors = ["Gleicon Moraes <gleicon@gmail.com>"]
description = "Multi-tenant JavaScript edge runtime (Rust + rusty_v8)"
license = "MIT"

[lib]
name = "nano"
path = "src/lib.rs"

[[bin]]
name = "nano-rs"
path = "src/main.rs"

[dependencies]
# Core V8 bindings (v135 for Rust 1.87 compatibility)
v8 = "135"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "compression-gzip", "compression-deflate"] }
serde = { version = "1.0", features = ["derive"] }

# URL parsing and encoding
url = "2.5"
percent-encoding = "2.3"
bytes = "1.6"
base64 = "0.22"

# Cryptographic randomness
getrandom = "0.2"

# Static initialization
lazy_static = "1.4"

# Workaround for Rust version compatibility
home = "=0.5.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
