[package]
name = "nano-rs"
version = "1.1.0"
edition = "2021"
authors = ["Gleicon Moraes <gleicon@gmail.com>"]
description = "Multi-tenant JavaScript edge runtime (Rust + rusty_v8)"
license = "MIT"

[lib]
name = "nano"
path = "src/lib.rs"

[[bin]]
name = "nano-rs"
path = "src/main.rs"

[dependencies]
# Core V8 bindings (v139 - conservative upgrade from v137)
v8 = "139"

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "timeout", "compression-gzip", "compression-deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL parsing and encoding
url = "2.5"
percent-encoding = "2.3"
bytes = "1.6"
base64 = "0.22"

# Cryptographic randomness
getrandom = "0.2"

# WebCrypto implementation via ring crate
ring = "0.17"
zeroize = { version = "1.8", features = ["derive"] }

# Checksum for file watching
sha2 = "0.10"

# Concurrent hash map for VFS backend
dashmap = "6.1"

# Static initialization
lazy_static = "1.4"

# Async blocking for timer callbacks
pollster = "0.4"

# HTTP client for outbound fetch()
hyper = { version = "1.4", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "tokio"] }
http-body-util = "0.1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# Workaround for Rust version compatibility
home = "=0.5.11"

# FFI support for V8 external data pointers
libc = "0.2"

# Async trait for VFS backends
async-trait = "0.1"

# Random for temp file suffixes in DiskBackend
rand = "0.8"

# S3-compatible object storage
rust-s3 = { version = "0.37", optional = true }
tokio-util = { version = "0.7", features = ["io"], optional = true }

# Tar archive format for sliver snapshots
tar = "0.4"

# Secure temporary files
tempfile = "3.10"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Directory walking for VFS file loading
walkdir = "2.5"

[features]
default = []
vfs-s3 = ["rust-s3", "tokio-util"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "sliver_cold_start"
harness = false
